<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="io.github.bctnry.tsubasareader.AboutActivity">

    <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize" android:id="@+id/toolbar_about"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:padding="24dp" android:layout_height="wrap_content" android:layout_below="@+id/toolbar_about"
            android:layout_alignParentStart="true">
        <TextView
                android:text="@string/app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" android:id="@+id/textView2" android:textSize="30dp"
                android:textColor="@android:color/black"/>
        <TextView
                android:text="@string/version_string"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_below="@+id/textView2"
                android:layout_alignParentStart="true" android:id="@+id/textView3"
                android:textColor="@color/dark_gray"/>
        <TextView
                android:text="@string/copyright"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_below="@+id/textView3"
                android:layout_alignParentStart="true" android:id="@+id/textView4"
                android:textColor="@color/dark_gray"/>
    </LinearLayout>
</RelativeLayout>
